--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "0.0.1",
     "description": "My first socket.io app",
     "dependecies": {},
-    "start": "node index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
     "dependencies": {
         "express": "^4.15.2",
         "socket.io": "^2.2.0"
